<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_send_cmd"
        android:orderInCategory="100"
        android:title="@string/menu_send_cmd"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_clr_scr"
        android:orderInCategory="100"
        android:title="@string/menu_clr_screen"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_toggle_obd_mode"
        android:orderInCategory="100"
        android:title="@string/menu_obd_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_clear_code"
        android:orderInCategory="100"
        android:title="@string/menu_obd_clear_code"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_view_kline"
        android:title="@string/k_line"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_motorsports"/>

    <item
        android:id="@+id/menu_hud_mode"
        android:title="@string/hud"
        app:showAsAction="ifRoom"
        android:icon="@drawable/gauge_icon"/>
</menu>
