<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/abstract_background"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/tvConnectionStatus"
        style="@style/connection_status_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/halo_red"
        android:gravity="center"
        android:text="@string/BT_connection_status" />
    <TextView
        android:id="@+id/deviceStatus_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@+id/tvConnectionStatus"
        android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/kLineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_below="@+id/deviceStatus_txt"
            android:layout_marginHorizontal="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/sendCMD_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_cmd"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/hideLayout_btn"/>

                <ImageButton
                    android:id="@+id/hideLayout_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_baseline_close_24"
                    android:contentDescription="@string/close_gauges"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparent" />

                <Button
                    android:id="@+id/set_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selection"
                    android:layout_below="@+id/hideLayout_btn"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/textHolderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/textLayout1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/output_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/protocol"
                        android:textColor="@color/green"
                        android:textColorHint="@color/white"/>

                    <TextView
                        android:id="@+id/standards_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/standards"
                        android:textColorHint="@color/white"
                        android:textColor="@color/green"/>
                    <TextView
                        android:id="@+id/kLine_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/speed"
                        android:textColorHint="@color/white"
                        android:textColor="@color/green"/>
                    <TextView
                        android:id="@+id/kLine_rpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/rpm"
                        android:textColor="@color/green"
                        android:textColorHint="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/textLayout2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/voltage_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/voltage"
                        android:textColor="@color/green"
                        android:textColorHint="@color/white"/>
                    <TextView
                        android:id="@+id/coolant_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/coolant_temp"
                        android:textColorHint="@color/white"
                        android:textColor="@color/green"/>
                    <TextView
                        android:id="@+id/fuel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/fuel_level"
                        android:textColorHint="@color/white"
                        android:textColor="@color/green"/>
                    <TextView
                        android:id="@+id/load_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/load"
                        android:textColor="@color/green"
                        android:textColorHint="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/toggleBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/basicToggleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp">

                    <ToggleButton
                        android:id="@+id/basicCMD_tb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/basicLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_cmds"
                        android:textColor="@color/white"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/allToggleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp">

                    <ToggleButton
                        android:id="@+id/allCMD_tb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/allLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_cmd"
                        android:textColor="@color/white"
                        android:layout_gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <com.github.anastr.speedviewlib.AwesomeSpeedometer
        android:id="@+id/tempSpeedometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:sv_maxSpeed="8000"
        app:sv_unit="@string/rpm"
        android:padding="10dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:name="com.denommeinc.vern.gauges.GaugeViewFragment"
        tools:layout="@layout/fragment_gauge_view" />


</RelativeLayout>