<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.denommeinc.vern.gui.GaugeDialog"
    android:gravity="center"
    android:background="@color/black">

        <com.github.anastr.speedviewlib.SpeedView
            android:id="@+id/speedView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:sv_maxSpeed="200"
            app:sv_withTremble="true"
            app:sv_unit="@string/mph"
            app:sv_textColor="@color/background_dark"
            app:sv_unitUnderSpeedText="true"
            app:sv_speedTextColor="@color/white"
            app:sv_unitTextColor="@color/white"
            android:layout_margin="10dp"
            />

        <com.github.anastr.speedviewlib.ProgressiveGauge
            android:id="@+id/progressiveGauge"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:sv_maxSpeed="8000"
            app:sv_unit="@string/rpm"
            app:sv_speedTextColor="@color/white"
            app:sv_unitTextColor="@color/white"
            app:sv_textColor="@color/white"
            app:sv_speedTextPosition="CENTER"
            app:sv_speedometerColor="@color/halo_red"
            android:layout_below="@+id/speedView"
            android:layout_marginHorizontal="10dp"
            />

        <ImageButton
            android:id="@+id/closeGauges_ib"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/progressiveGauge"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:backgroundTint="@color/transparent"
            android:clickable="true"
            android:contentDescription="@string/refresh"
            android:focusable="true"
            android:src="@drawable/ic_baseline_close_24"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_alignParentTop="true"/>


</RelativeLayout>